--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="Bar" class="home-bg about-bg contact-bg press-bg gallery-bg events-bg">
 
 <head>
     <meta charset="UTF-8">
     <title>Bar Site</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- Angular Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-resource.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
     <script src="app/app.js"></script>
-    <script src="app/services.js"></script>
     <script src="app/controllers.js"></script>
+    <script src="app/services.js"></script>
 </head>
 
 <body>
+    <div ng-include="'views/navbar.html'"></div>
     <div ui-view></div>
 </body>
 
