--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="Bar">
 
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lambda Lounge</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -12,6 +12,9 @@
 </head>
 
 <body id="bs-override">
+    <div class="home-box centered">
+        <img class="img-shrink" src="./img/lambda.png">
+    </div>
     <div ng-include="'views/navbar.html'"></div>
     <div ui-view></div>
     <!-- Scripts -->
